# hypertunnel

./: README.md  workspace.code-workspace
Source/: Cargo.toml  DESCRIPTION.md  cargo.toml  test_curl.sh
Source/client-cli/: Cargo.toml
Source/client-cli/src/: main.rs
Source/client-core/: Cargo.toml
Source/client-core/src/: lib.rs  meta.rs  transit.rs  transit_builder.rs
Source/client-transit/: Cargo.toml
Source/client-transit/src/: builder.rs  lib.rs
Source/hypertunnel_gui/: Cargo.toml
Source/hypertunnel_gui/src/: app.rs  lib.rs  main.rs
Source/integration-tests/: Cargo.toml
Source/integration-tests/src/: lib.rs
Source/libsecrets/: Cargo.toml
Source/libsecrets/benches/: allocate_benchmark.rs  decryption_benchmark.rs  encryption_benchmark.rs  key_derivation_benchmark.rs  structs_vs_strings.rs
Source/libsecrets/src/: lib.rs
Source/libsocks/: Cargo.toml
Source/libsocks/src/: lib.rs
Source/libtransit/: Cargo.toml
Source/libtransit/benches/: multiple_messages_benchmark.rs
Source/libtransit/src/: client.rs  lib.rs  tests.rs
Source/server/: Cargo.toml  server.config.toml
Source/server-core/: Cargo.toml
Source/server-monolith/: Cargo.toml  server.config.toml
Source/server-monolith/src/: config.rs  main.rs  meta.rs  new_transit.rs  transit_socket.rs
Source/server/src/: client_manager.rs  config.rs  control_server.rs  main.rs  shared.rs
Source/transit-client/: Cargo.toml
