[package]
name = "client-cli"
version = "0.1.0"
authors = ["Alex <alexcj2802@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
clientcore = { path = "../client-core" }
tokio = { version = "1.36.0", features = ["full"] }
simple_logger = "4.3"
log = "0.4"

[profile.release]
debug = true
