[package]
name = "client-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsocks = {path = "../libsocks"}
client-transit = {path = "../client-transit"}
tokio = { version = "1.30.0", features = ["net"] }
libtransit = {path = "../libtransit"}