[package]
name = "clientcore"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsocks = {path = "../libsocks"}
libtransit = {path = "../libtransit"}
libsecrets = { path = "../libsecrets" }

tokio = { version = "1.30.0", features = ["net"] }

reqwest = { version = "0.11", features = ["json"] }

rand = "0.8"
hex = "0.4"

flume = "0.10"
debug_print = "1"

once_cell = "1.18.0"