[package]
name = "client-transit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsecrets = { path = "../libsecrets" }
libtransit = { path = "../libtransit" }
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
hex = "0.4"
tokio = { version = "1.30.0", features = ["net"] }
flume = "0.10"
debug_print = "1"