[package]
name = "libsecrets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chacha20poly1305 = "0.10.1"
generic-array = "1"
sha2 = "0.10.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "encryption_benchmark"
harness = false

[[bench]]
name = "decryption_benchmark"
harness = false

[[bench]]
name = "key_derivation_benchmark"
harness = false

[[bench]]
name = "allocate_benchmark"
harness = false

[[bench]]
name = "robs_benchmark"
harness = false