[package]
name = "server-monolith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

libtransit = { path = "../libtransit" }
libsecrets = { path = "../libsecrets" }

dashmap = "5"

once_cell = "1.18.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
rand = "0.8"
debug_print = "1"

hex = "0.4"

num_cpus = "1.16"

tokio = {version = "1", features = ["sync", "net", "io-util"]}

flume = "0.10"