[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
actix-web = "4"
libtransit = { path = "../libtransit" }
libsecrets = { path = "../libsecrets" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
debug_print = "1"
hex = "0.4"
rand = "0.8"
once_cell = "1.8"